// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Players Renders players 1`] = `
<div
  className="players"
>
  <div
    className="players__player players__player--1"
    key="player1"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={0}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player1",
            "name": "Player 1",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 1
    </div>
  </div>
  <div
    className="players__player players__player--2"
    key="player2"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={1}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player2",
            "name": "Player 2",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 2
    </div>
  </div>
</div>
`;

exports[`Players With one player Renders and displays the join code 1`] = `
<div
  className="players"
>
  <div
    className="players__player players__player--1"
    key="player1"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={0}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player1",
            "joinCode": "abcdefgh",
            "name": "Player 1",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 1
    </div>
  </div>
  <div
    className="players__player"
  >
    <p>
      Invite someone to sign up and give them the code:
    </p>
    <p
      id="join-code"
    >
      abcdefgh
    </p>
    <p>
      to get them to join this game.
    </p>
  </div>
</div>
`;

exports[`Players With players being owed Renders players with p1 being owed > 1 1`] = `
<div
  className="players"
>
  <div
    className="players__player players__player--1"
    key="player1"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={0}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player1",
            "name": "Player 1",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 1
    </div>
  </div>
  <div
    className="players__player players__player--2"
    key="player2"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={1}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player2",
            "name": "Player 2",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 2
    </div>
  </div>
</div>
`;

exports[`Players With players being owed Renders players with p1 being owed 1`] = `
<div
  className="players"
>
  <div
    className="players__player players__player--1"
    key="player1"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={0}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player1",
            "name": "Player 1",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 1
    </div>
  </div>
  <div
    className="players__player players__player--2"
    key="player2"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={1}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player2",
            "name": "Player 2",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 2
    </div>
  </div>
</div>
`;

exports[`Players With players being owed Renders players with p2 being owed > 1 1`] = `
<div
  className="players"
>
  <div
    className="players__player players__player--1"
    key="player1"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={0}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player1",
            "name": "Player 1",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 1
    </div>
  </div>
  <div
    className="players__player players__player--2"
    key="player2"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={1}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player2",
            "name": "Player 2",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 2
    </div>
  </div>
</div>
`;

exports[`Players With players being owed Renders players with p2 being owed 1`] = `
<div
  className="players"
>
  <div
    className="players__player players__player--1"
    key="player1"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={0}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player1",
            "name": "Player 1",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 1
    </div>
  </div>
  <div
    className="players__player players__player--2"
    key="player2"
  >
    <div
      className="players__avatar"
    >
      <AvatarComponent
        accessoriesType="Blank"
        avatarStyle="Transparent"
        clotheColor="Blue03"
        clotheType="BlazerShirt"
        eyeType="Default"
        eyebrowType="Default"
        facialHairColor="BrownDark"
        facialHairType="Blank"
        hairColor="BrownDark"
        mouthType="Twinkle"
        skinColor="Light"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "width": "100%",
          }
        }
        topType="LongHairStraight"
      />
      <Connect(OwedBadge)
        idx={1}
        player={
          Object {
            "avatar": Object {
              "accessoriesType": "Blank",
              "avatarStyle": "Transparent",
              "clotheColor": "Blue03",
              "clotheType": "BlazerShirt",
              "eyeType": "Default",
              "eyebrowType": "Default",
              "facialHairColor": "BrownDark",
              "facialHairType": "Blank",
              "hairColor": "BrownDark",
              "mouthType": "Twinkle",
              "skinColor": "Light",
              "topType": "LongHairStraight",
            },
            "id": "player2",
            "name": "Player 2",
          }
        }
      />
    </div>
    <div
      className="players__player-name"
    >
      Player 2
    </div>
  </div>
</div>
`;
